# SmartCalc_v1.0

./: CMakeLists.txt
src/: Makefile  smartcalc.h
src/data_structures/: queue.c  queue.h  stack.c  stack.h
src/functions/: calc.c  expr_to_lexems.c  help_funcs.c  lexems_to_postfix.c  op_calc.c
src/gui/: SmartCalcpls.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/tests/: controller_tests.c  controller_tests.h
